--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meet-up",
+  "name": "virtual-verse",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,9 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@stream-io/node-sdk": "^0.4.4",
+    "@stream-io/video-react-sdk": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -21,8 +24,10 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "virtual-verse": "file:"
   },
   "devDependencies": {
     "@types/node": "^20",
