--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.454.0",
     "meet-up": "file:",
     "next": "14.2.15",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
+    "react-toast": "^1.0.3",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
